forth/test/fail/test_dot_call_value.af
\ Must fail to compile.
123 let: TEST_DOT_CALL_VALUE
.TEST_DOT_CALL_VALUE
